force-app/main/default/objects/Baseline__c/Baseline__c.object-meta.xml
<CustomObject>
    <label>Baseline</label>
    <nameField>
        <displayFormat>BL-{00000}</displayFormat>
        <label>Baseline Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Baselines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>