force-app/main/default/objects/Baseline__c/fields/Base_PPW__c.field-meta.xml
<CustomField>
    <fullName>Base_PPW__c</fullName>
    <formula>IF( ISPICKVAL(Type__c, &quot;Cash&quot;),  PPW__c +  State__r.Cash_Margin__c , 
IF( ISPICKVAL(Type__c, &quot;Loan&quot;),  PPW__c +  State__r.Loan_Margin__c , 
IF( ISPICKVAL(Type__c, &quot;TPO&quot;),  PPW__c +  State__r.TPO_Margin__c , 
0)))</formula>
    <label>Base PPW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>