force-app/main/default/objects/Baseline__c/fields/Check_Base_PPW__c.field-meta.xml
<CustomField>
    <fullName>Check_Base_PPW__c</fullName>
    <description>If this record is the default, compares the Base PPW from the related State and the PPW of this record to make sure the State has been updated</description>
    <formula>IF( AND(PPW__c &lt;&gt;  State_Base_PPW__c,  Is_Default__c ) , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Base PPW</label>
    <type>Checkbox</type>
</CustomField>