force-app/main/default/objects/Baseline__c/fields/Finance_Company__c.field-meta.xml
<CustomField>
    <fullName>Finance_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Company</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Financier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Baselines</relationshipLabel>
    <relationshipName>Baselines</relationshipName>
    <type>Lookup</type>
</CustomField>