force-app/main/default/objects/Baseline__c/fields/Finance_Key__c.field-meta.xml
<CustomField>
    <fullName>Finance_Key__c</fullName>
    <formula>Finance_Company__r.Name &amp; &apos; - &apos; &amp;  TEXT(Type__c)</formula>
    <label>Finance Key</label>
    <type>Text</type>
</CustomField>