force-app/main/default/objects/Baseline__c/fields/Panel__c.field-meta.xml
<CustomField>
    <fullName>Panel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Panel</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Select a valid panel</errorMessage>
        <filterItems>
            <field>Product2.RecordType.Name</field>
            <operation>equals</operation>
            <value>Panel</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Baselines</relationshipLabel>
    <relationshipName>Baselines</relationshipName>
    <type>Lookup</type>
</CustomField>