force-app/main/default/objects/Baseline__c/fields/PPW__c.field-meta.xml
<CustomField>
    <fullName>PPW__c</fullName>
    <label>PPW</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>