force-app/main/default/objects/Baseline__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Sorts the Financiers in the same order as the CBATS</description>
    <formula>CASE(  Finance_Key__c,
&apos;Credit Human - Loan&apos;, &apos;1&apos;,
&apos;Enfin - Loan&apos;, &apos;2&apos;, 
&apos;Enfin - TPO&apos;, &apos;3&apos;, 
&apos;Everbright - TPO&apos;, &apos;4&apos;,
&apos;Goodleap - TPO&apos;, &apos;5&apos;,
&apos;Sunrun - TPO&apos;, &apos;6&apos;, 
&apos;Cash (Paykeeper) - Cash&apos;, &apos;7&apos;,
&apos;8&apos;)</formula>
    <label>Sort Order</label>
    <type>Text</type>
</CustomField>