force-app/main/default/objects/Baseline__c/fields/State_Base_PPW__c.field-meta.xml
<CustomField>
    <fullName>State_Base_PPW__c</fullName>
    <formula>IF( ISPICKVAL(Type__c, &quot;Cash&quot;), State__r.Cash_Base_PPW__c  ,
IF( ISPICKVAL(Type__c, &quot;Loan&quot;), State__r.Loan_Base_PPW__c ,
IF( ISPICKVAL(Type__c, &quot;TPO&quot;),  State__r.TPO_Base_PPW__c ,
0)))</formula>
    <label>State Base PPW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>