force-app/main/default/objects/Baseline__c/fields/State_Finance__c.field-meta.xml
<CustomField>
    <fullName>State_Finance__c</fullName>
    <formula>State__r.Name &amp; &apos; - &apos; &amp;   Finance_Company__r.Name</formula>
    <label>State Finance</label>
    <type>Text</type>
</CustomField>