force-app/main/default/objects/Baseline__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>Utility__c</columns>
    <columns>Is_Default__c</columns>
    <columns>Type__c</columns>
    <columns>PPW__c</columns>
    <columns>Finance_Company__c</columns>
    <columns>Panel__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>